Lombok removed